--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,171 +5,55 @@
     android:layout_height="match_parent"
     android:background="@color/background_color">
 
-    <ScrollView
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/background_color"
+            app:titleTextColor="@color/white_full">
+
+        </android.support.v7.widget.Toolbar>
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tablayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/background_color"
+            app:tabIndicatorColor="@color/accent"
+            app:tabSelectedTextColor="@color/white_full"
+            app:tabTextColor="@color/secondary_text">
 
-            >
+        </android.support.design.widget.TabLayout>
 
-            <TextView
-                android:id="@+id/tv_header_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_medium_2"
-                android:layout_marginTop="@dimen/margin_medium_2"
-                android:text="@string/head_name_1"
-                android:textColor="@color/white_full"
-                android:textSize="@dimen/text_heading_1x" />
+    </android.support.design.widget.AppBarLayout>
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/cv_content_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_header_1"
-                android:layout_marginLeft="@dimen/margin_medium_2"
-                android:layout_marginRight="@dimen/margin_medium_2"
-                android:layout_marginTop="@dimen/margin_medium"
-                app:cardCornerRadius="4dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+        <android.support.v4.view.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/vp_tab">
 
-                    <ImageView
-                        android:id="@+id/iv_content_1"
-                        android:layout_width="@dimen/big_content_width"
-                        android:layout_height="320dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_dummy_logo_1" />
+        </android.support.v4.view.ViewPager>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignRight="@id/iv_content_1"
-                        android:layout_margin="@dimen/margin_medium_2"
-                        android:src="@drawable/ic_add_white" />
+    </RelativeLayout>
 
-                    <Button
-                        android:layout_width="@dimen/margin_button_width"
-                        android:layout_height="@dimen/margin_xlarge"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="@dimen/margin_large_1"
-                        android:background="@drawable/button_background"
-                        android:drawableLeft="@drawable/ic_play_arrow"
-                        android:drawablePadding="@dimen/margin_button_width_n"
-                        android:paddingLeft="@dimen/margin_medium_3"
-                        android:text="@string/start"
-                        android:textColor="@color/white_full" />
+    <android.support.design.widget.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/navigation_height"
+        android:layout_gravity="bottom"
+        android:background="@color/background_color"
+        app:itemIconTint="@color/secondary_text"
+        app:itemTextColor="@color/white_full"
+        app:menu="@menu/navigation_menu">
 
+    </android.support.design.widget.BottomNavigationView>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@id/iv_content_1"
-                        android:layout_alignRight="@id/iv_content_1"
-                        android:layout_margin="@dimen/margin_medium_2"
-                        android:text="@string/duration"
-                        android:textColor="@color/white_full"
-
-                        />
-
-                </RelativeLayout>
-
-
-            </android.support.v7.widget.CardView>
-
-            <TextView
-                android:id="@+id/tv_header_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/cv_content_1"
-                android:layout_below="@id/cv_content_1"
-                android:layout_marginTop="@dimen/margin_xxlarge"
-                android:text="@string/head_name_2"
-                android:textColor="@color/white_full"
-                android:textSize="@dimen/text_heading_1x" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_meditation_tips"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_header_2"
-                android:layout_marginLeft="@dimen/margin_medium_2"
-                android:layout_marginTop="@dimen/margin_medium_2">
-
-            </android.support.v7.widget.RecyclerView>
-
-
-            <TextView
-                android:id="@+id/tv_header_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/cv_content_1"
-                android:layout_below="@id/rv_meditation_tips"
-                android:layout_marginTop="@dimen/margin_xxlarge"
-                android:text="@string/head_name_3"
-                android:textColor="@color/white_full"
-                android:textSize="@dimen/text_heading_1x" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_healthy_tips"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_header_3"
-                android:layout_marginLeft="@dimen/margin_medium_2"
-                android:layout_marginTop="@dimen/margin_medium_2">
-
-            </android.support.v7.widget.RecyclerView>
-
-
-            <TextView
-                android:id="@+id/tv_header_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/cv_content_1"
-                android:layout_below="@id/rv_healthy_tips"
-                android:layout_marginTop="@dimen/margin_xxlarge"
-                android:text="@string/head_name_4"
-                android:textColor="@color/white_full"
-                android:textSize="@dimen/text_heading_1x" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_new_tips"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_header_4"
-                android:layout_marginLeft="@dimen/margin_medium_2"
-                android:layout_marginTop="@dimen/margin_medium_2">
-
-            </android.support.v7.widget.RecyclerView>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/cv_content_1"
-                android:layout_below="@id/rv_new_tips"
-                android:layout_marginTop="@dimen/margin_xxlarge"
-                android:text="@string/head_name_5"
-                android:textColor="@color/white_full"
-                android:id="@+id/tv_header_5"
-                android:textSize="@dimen/text_heading_1x"
-                />
-            
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_medium_2"
-                android:layout_below="@id/tv_header_5"
-                android:id="@+id/rv_category_tips"
-                >
-
-            </android.support.v7.widget.RecyclerView>
-
-
-        </RelativeLayout>
-    </ScrollView>
 </android.support.design.widget.CoordinatorLayout>
