making composite-custom view

--- a/app/src/main/res/layout/item_category_tips.xml
+++ b/app/src/main/res/layout/item_category_tips.xml
@@ -33,21 +33,22 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/tv_content_1"
             android:text="@string/category_tips"
-            android:id="@+id/tv_category_tips_1"
+            android:id="@+id/tv_topic_name"
             android:layout_marginTop="@dimen/margin_xlarge"
             android:textColor="@color/white_full"
             android:textSize="@dimen/text_regular_3x"
 
             />
         <TextView
+            android:id="@+id/tv_topic_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_category_tips_1"
+            android:layout_below="@id/tv_topic_name"
             android:text="@string/category_hint"
             android:textColor="@color/white_full"
             android:textSize="@dimen/text_regular"
             android:layout_marginTop="@dimen/margin_small"
-            android:layout_alignLeft="@id/tv_category_tips_1"
+            android:layout_alignLeft="@id/tv_topic_name"
             />
 
 
