--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,17 +43,22 @@
 
         </android.support.v4.view.ViewPager>
 
-    </RelativeLayout>
+
+
+
 
     <android.support.design.widget.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="@dimen/navigation_height"
         android:layout_gravity="bottom"
-        android:background="@color/background_color"
+        android:id="@+id/bottom_navigation"
+        android:background="@color/navigation_background"
+        android:layout_alignParentBottom="true"
         app:itemIconTint="@color/secondary_text"
         app:itemTextColor="@color/white_full"
         app:menu="@menu/navigation_menu">
 
     </android.support.design.widget.BottomNavigationView>
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
