--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,4 +43,5 @@
     <dimen name="content_height">160dp</dimen>
     <dimen name="content_width">180dp</dimen>
     <dimen name="navigation_height">56dp</dimen>
+    <dimen name="collapsing_tool_bar_height">256dp</dimen>
 </resources>
