--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color">
+    android:background="@color/background_color"
+    android:id="@+id/cl_series_fragment">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -36,29 +37,33 @@
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.v4.view.ViewPager
+        <FrameLayout
+            android:id="@+id/fl_main_screen"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/vp_tab">
+            android:layout_height="wrap_content"
+            android:layout_above="@id/bottom_navigation">
 
-        </android.support.v4.view.ViewPager>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vp_tab"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v4.view.ViewPager>
+        </FrameLayout>
 
 
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/navigation_height"
+            android:layout_alignParentBottom="true"
+            android:background="@color/navigation_background"
+            app:itemIconTint="@color/secondary_text"
+            app:itemTextColor="@color/white_full"
+            app:menu="@menu/navigation_menu">
 
+        </android.support.design.widget.BottomNavigationView>
 
-
-    <android.support.design.widget.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/navigation_height"
-        android:layout_gravity="bottom"
-        android:id="@+id/bottom_navigation"
-        android:background="@color/navigation_background"
-        android:layout_alignParentBottom="true"
-        app:itemIconTint="@color/secondary_text"
-        app:itemTextColor="@color/white_full"
-        app:menu="@menu/navigation_menu">
-
-    </android.support.design.widget.BottomNavigationView>
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
