--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="background_color">#263238</color>
     <color name="black">#000000</color>
     <color name="navigation_background">#455a64</color>
+    <color name="session_background">#212121</color>
 </resources>
